--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/6f270c1cda.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="styles.css">
-  <title>My Website</title>
+  <title>SOMESHA HEWAGE</title>
 </head>
 
 <body>
