--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             
           </div>
           <div class="project-img">
-            <img src="./Capture.PNG" alt="img">
+            <img src="./Capture 1.png" alt="img">
           </div>
         </div>
       </div>
