--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             them further. I have excellent organizational and planning
             skills. I'm flexible and I wish to pursue a career in the of
             where my skills and abilities</p>
-        <a href="Somesha Hewage.pdf" class="cta">Download Resume</a>
+        <a href="Somesha Hewage (1).pdf" class="cta">Download Resume</a>
         
       </div>
     </div>
